# lemmy-comment-auto-delete

./: Cargo.toml  README.md
src/: api.rs  comment.rs  configuration.rs  helper.rs  main.rs  post.rs
systemd/: distenourize.service  distenourize.timer
